@@ -1,3 +1,9 @@
+2018-10-01  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/87465
+	* tree-ssa-loop-ivcanon.c (tree_estimate_loop_size): Fix typo
+	causing branch miscounts.
+
 2018-10-01  Tamar Christina  <tamar.christina@arm.com>
 
 	* common/config/aarch64/aarch64-common.c (TARGET_OPTION_DEFAULT_PARAM,
